(fix) search keyword was white in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
     --background-rgb: 0, 0, 0;
   }
 
-  select {
+  select, input {
     color: rgb(var(--background-rgb));
   }
 
